--- a/_sass/wizard.scss
+++ b/_sass/wizard.scss
@@ -10,11 +10,7 @@
   font-style: normal;
 }
 
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
+*, *:before, *:after {
   box-sizing: border-box;
 }
 
@@ -44,14 +40,8 @@ main {
   padding: 20px;
   max-width: 1300px;
   min-height: 100vh;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
-  -webkit-flex-flow: row wrap;
   flex-flow: row wrap;
-  -webkit-justify-content: space-around;
   justify-content: space-around;
 }
 
@@ -109,8 +99,6 @@ a {
     flex: 1;
     text-align: center;
     padding: 5px 3px 0;
-    margin-left: 15px;
-    margin-right: 15px;
     box-shadow: none;
 
     &:active,
@@ -122,6 +110,12 @@ a {
   svg {
     height: 2.75rem;
     width: 2.75rem;
+  }
+}
+@media (min-width: 550px) {
+  .social a {
+    margin-left: 15px;
+    margin-right: 15px;
   }
 }
 
